container automatically adjusts to window height, preventing elements from overflowing onto the signup div

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -19,7 +19,7 @@ html,body {
 }
 
 .container {
-  height: 700px;
+  height: 940px;
 }
 
 #above_chart {
@@ -84,6 +84,11 @@ table {
 desc {
   display: none;
   color: #191919;
+}
+
+.flight_body {
+  height: 1200px;
+  background-color: #191919;
 }
 
 // ----------------------------------------------
